[gd_scene load_steps=18 format=2]

[ext_resource path="res://rules/scripts/mode/ctf/ctf.gd" type="Script" id=1]
[ext_resource path="res://rules/scripts/misc/game_fps.gd" type="Script" id=2]
[ext_resource path="res://rules/resources/themes/fonts/m5x7.tres" type="DynamicFont" id=3]
[ext_resource path="res://rules/resources/general/sky.png" type="Texture" id=4]
[ext_resource path="res://rules/resources/themes/message_style.tres" type="StyleBox" id=5]
[ext_resource path="res://rules/resources/shaders/shadow.tres" type="Material" id=6]
[ext_resource path="res://rules/scripts/misc/game_chat.gd" type="Script" id=7]
[ext_resource path="res://rules/scripts/misc/game_map.gd" type="Script" id=8]
[ext_resource path="res://entities/content/character/builder.tscn" type="PackedScene" id=9]
[ext_resource path="res://rules/scripts/misc/game_camera.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath("..:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 3, 3 ),
"update": 0,
"values": [ -250, -100 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ChatInput:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath("..:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 3, 3 ),
"update": 0,
"values": [ -100, -250 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ChatInput:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 0.25098 )
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxEmpty" id=7]

[node name="GameMode" type="Node2D"]
script = ExtResource( 1 )
default_character = ExtResource( 9 )

[node name="FPS" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="FPS" type="Label" parent="FPS"]
margin_left = 4.0
margin_top = 4.0
margin_right = 104.0
margin_bottom = 29.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="Panel" type="PanelContainer" parent="Chat"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -100.0
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="Chat/Panel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 95.0
custom_constants/separation = 1

[node name="ChatAnimation" type="AnimationPlayer" parent="Chat/Panel/Layout"]
playback_speed = 5.0
anims/close = SubResource( 1 )
anims/open = SubResource( 2 )

[node name="ChatDisplay" type="RichTextLabel" parent="Chat/Panel/Layout"]
margin_right = 290.0
margin_bottom = 73.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0.803922, 0.807843, 0.341176, 1 )
bbcode_enabled = true
bbcode_text = "Welcome to KAG Rewritten!"
text = "Welcome to KAG Rewritten!"
scroll_following = true
selection_enabled = true

[node name="ChatInput" type="LineEdit" parent="Chat/Panel/Layout"]
margin_top = 74.0
margin_right = 290.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
max_length = 150
placeholder_text = "Type your message here"
placeholder_alpha = 0.5

[node name="Map" type="Node2D" parent="."]
script = ExtResource( 8 )
map_path = "res://rules/resources/maps/fuzzle_stale.png"
tile_directories = [ "res://entities/content/tiles/" ]

[node name="Sky" type="Sprite" parent="Map"]
scale = Vector2( 1e-05, 1e-05 )
z_index = -10
texture = ExtResource( 4 )
centered = false

[node name="Shadow" type="Sprite" parent="Map"]
material = ExtResource( 6 )
z_index = 3
centered = false

[node name="TileMap" type="TileMap" parent="Map"]
z_index = 1
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 4
cell_custom_transform = Transform2D( 8, 0, 0, 8, 0, 0 )
format = 1

[node name="Camera" type="Camera2D" parent="."]
offset = Vector2( 0, -8 )
current = true
process_mode = 0
smoothing_enabled = true
smoothing_speed = 16.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 10 )
[connection signal="focus_entered" from="Chat/Panel/Layout/ChatInput" to="Chat" method="_on_ChatInput_focus_entered"]
[connection signal="focus_exited" from="Chat/Panel/Layout/ChatInput" to="Chat" method="_on_ChatInput_focus_exited"]
